This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


1.6.5 - not released yet
========================
+ Add a hotkey to open the subtitles downloader dialog
+ Web server: various performance improvements
+ Ticket #439, External subtitles: support UTF8 without BOM
+ Ticket #1680, Add Greek translation
+ Ticket #2647, Add .3ga to known formats
* Updated FFmpeg (n0.8-15337-gbacebe1)
* Updated MediaInfoLib to v0.7.61
* Updated ZenLib to v0.4.28 r411
* Updated Little CMS to v2.4 (git 886e2f5)
* Updated Basque, French, German, Simplified Chinese, Slovak and Ukrainian translations
! MpaDecFilter: updated CMixer, avoid possible memory leaks
! API: CMD_PAUSE was acting as CMD_PLAY and vice versa
! MPEG Splitter: Fix parsing of some malformed TS files
! Ticket #376, Fix subtitles when switching from animated subs to non-animated subs.
  The subtitles' timings were not correctly respected after switching from an
  animated subtitles track to a non-animated subtitles track.
! Ticket #2537, #2554, Fix "Attempted an unsupported operation" error in the
  Save dialogs on Vista and newer systems
! Ticket #2572, FLACSource: Fix playback for some files
! Ticket #2619, FLVSplitter: PCM audio doesn't play
! Ticket #2673, MPEG Splitter: Fix playback for some TS files
! Ticket #2685, FLACSource: Fix a crash with some corrupted file